2004-09-13  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/15857
	Backport from gcc-3_4-branch
	2004-08-24  Jason Merrill  <jason@redhat.com>
	PR c++/15461
	* semantics.c (nullify_returns_r): Replace a DECL_STMT
	for the NRV with an INIT_EXPR.

2004-07-24  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/16175
	* error.c (dump_type) <BOUND_TEMPLATE_TEMPLATE_PARM case>: Output
	cv qualifier.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline:
	2004-03-18  Mark Mitchell  <mark@codesourcery.com>
	* call.c (build_conditional_expr): Do not call force_rvalue for
	operands of void_type when the conditional expression itself has
	void type.

2004-05-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Make-lang.in (cp/init.o): Depend on diagnostic.h.
	* except.c (do_free_exception): Prototype.
	* init.c: Include "diagnostic.h".

2004-05-04  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	Backport:
	2004-04-01  Mark Mitchell  <mark@codesourcery.com>
	PR c++/14810
	* decl.c (maybe_push_cleanup_level): Robustify.

2004-05-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from gcc-3_4-branch
	2004-03-30  Mark Mitchell  <mark@codesourcery.com>
	            Jakub Jelinek  <jakub@redhat.com>
	PR c++/14763
	* pt.c (tsubst_default_argument): Clear current_function_decl.
	* decl2.c (mark_used): Don't segfault if cfun != NULL but
	current_function_decl == NULL.

2004-05-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from gcc-3_4-branch:
	2004-03-30  Mark Mitchell  <mark@codesourcery.com>
	PR c++/14724
	* decl.c (start_decl_1): Do not decide whether or not to create a
	new cleanup level until after the type has been completed.

2004-04-01  Richard Henderson  <rth@redhat.com>

        PR c++/14804
        * decl.c (cp_finish_decl): Preserve TREE_READONLY more often.
        * typeck2.c (split_nonconstant_init): Clear TREE_READONLY.
